--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         <a href"">Link 3</a>
       </nav>
         <main>
-                <img src="img/1.jpg" alt="A dog">
+                <div class="flexItem"></div> <p>Hello</p>
 
-                <img src="img/2.jpg" alt="Another dog">
+                <div class="flexItem"></div> <p>Hello</p>
 
-                <img class="vertical" src="img/3.jpeg" alt="Something like a dog">
+                <div class="flexItem"></div> <p>Hello</p>
 
-                <img src="img/4.jpeg" alt="Might be a dog">
+                <div class="flexItem"></div> <p>Hello</p>
 
-                <img src="img/5.jpeg" alt="Dogs are people too">
 
-                <img src="img/6.jpg" alt="Dogs are better">
+
         </main>
     </body>
 </html>
