--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-    <img src="img/highland-beauty-barber-logo.png" alt="logo">
+    <img class="logo" src="img/highland-beauty-barber-logo.png" alt="logo">
 
     <!-- Logo -->
 
